--- a/OffensiveLuaEmbedded/OffensiveLuaEmbedded/OffensiveLuaEmbedded.vcxproj
+++ b/OffensiveLuaEmbedded/OffensiveLuaEmbedded/OffensiveLuaEmbedded.vcxproj
@@ -80,6 +80,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+  <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalIncludeDirectories>..\luajit\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -113,6 +114,7 @@ cd $(TargetDir)
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+  <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalIncludeDirectories>..\luajit\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -146,6 +148,7 @@ cd $(TargetDir)
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+  <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalIncludeDirectories>..\luajit\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -179,6 +182,7 @@ cd $(TargetDir)
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+  <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalIncludeDirectories>..\luajit\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
